Fix layout issues
ListBox actually part of layout flow. Change SeatingEditor to position:relative so bounds work properly. Moved ButtonBox to Route

--- a/src/seating/SeatingEditor.css
+++ b/src/seating/SeatingEditor.css
@@ -1,6 +1,7 @@
 .seating-container {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .seat-element {
